# nba-dfs

./: .env.example  .env.local  .gitignore  AGENTS.md  CLAUDE.md  PR_BODY.md  README.md  audit_fs.md  components.json  package-lock.json  package.json  pyproject.toml  repomix-output.xml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/agents/: frontend-ui-builder.md
.claude/commands/: code-review.md  end-prp.md  end.md  execute-prp.md  generate-prp.md
.codex/: config.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 0763c704759a51c5  18507af2ed30b63e  1bc98b281873a009  1bd3b7bc6991aa22  27ea786e00dcc92d  319e40e143fbcae1  41ed0c50c4c553fd  4354ccc18ed191ad  48fd7215a193b411  49b87ac968562ad5  708e39a03028d274  734317095193f23a  764a4946c61dde6e  808eefd17cf39f7d  81b16ad4b8ab2a51  829db938953fb1b8  89e61795703466ef  9732db8acc3fc3ec  aadb1052d44922d9  b1eb4bd1ff254ccd  c50b4dec25b17e31  c5b0acba7641ca8e  ca4649c15cda3885  d1ba34c7e208d267  d39c43afaad0d48d  d4bd0cbda561e127  d4ce2e5216cc690e  d6a200bae54596ed  d8a583cae76313c3  d97504fdd9d33d63  e1067790cd5c98d5  e47fffbfd3764335  f2d1eacd963b65d5  f644117b19bc2888  fca466d9dfde3667
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
app/: README.md  layout.tsx  page.tsx
artifacts/: audit_fs.md  field_base.jsonl  field_merged.jsonl  metrics.json
components/: README.md
components/aceternity/: SpotlightWrapper.tsx
components/lineups/: LineupTable.tsx  LineupToolbar.tsx  LineupViews.tsx
components/metrics/: IngestSummary.tsx  RunSummary.tsx
components/runs/: LoadRunModal.tsx
components/theme/: ThemeToggle.tsx
components/ui/: ControlsBar.tsx  LineupGrid.tsx  LineupGridPlaceholder.tsx  MetricsDrawer.tsx  PageContainer.tsx  TopStatusBar.tsx  TopTabs.tsx  UploadDropzone.tsx  collapsible.tsx  scroll-area.tsx  slider.tsx
configs/: README.md  field.yaml  optimizer.yaml  sim.yaml  variants.yaml  yamllint.yml
debug_property_out/: audit_fs.md  field_base.jsonl  metrics.json
docs/: FS-04-Field-Sampler-Duplication-Report.md  Optimizer_page_audit.md  README.md  USAGE-field-sampler.md  audit_fs.md  variant_builder_audit
docs/PRPs/: AGENT-Frontend-Shadcn.md  PR-validators-ssot-01.md  PRP-1-Ingest-Normalization.md  PRP-12-API-Endpoints-Followup.md  PRP-1b-Runtime-Validation.md  PRP-2-Optimizer-Adapter-TAILORED.md  PRP-2L-Legacy-Docs-and-DeUI-Plan.md  PRP-3-Variant-Adapter.md  PRP-3a-Variants-Adapter-Polish.md  PRP-4-Field-Sampler-Adapter.md  PRP-5-GPP-Sim-Adapter.md  PRP-9-API-Layer.md  PRP-FS-01-Field-Sampler-Injection-Model-20250909-003232.md  PRP-FS-01-Field-Sampler.md  PRP-FS-02-Validators-and-Core-Sampler-20250909-003232.md  PRP-FS-02a-Sampler-Validity-Debug.md  PRP-FS-03-CLI-Wrapper-Optional-20250909-003232.md  PRP-FS-04-FIELD_SAMPLER_DUPLICATION_AUDIT  PRP-FS-04-FIELD_SAMPLER_DUPLICATION_AUDIT.md  PRP-FS-05-Field-Sampler-Unification.md  PRP-FS-06-Field-Sampler-Page.md  PRP-FS-07-Lint-Test-Stabilization-Agent.md  PRP-GPP-01-Minimal-Contest-Simulator-20250909-041953.md  PRP-INGEST-03.md  PRP-OPT-04A.md  PRP-OPT-05.md  PRP-OPT-06.md  PRP-OPT-06B.md  PRP-OPT-06C-update.md  PRP-OPT-06C.md  PRP-ORCH-01-One-Command-End-to-End.md  PRP-PIPE-00-Pipeline-Overview-20250909-003232.md  PRP-RUN-01-Run-Registry.md  PRP-RUNS-01-Load-And-Retention.md  PRP-SIM-01  PRP-SIM-01-implementation.md  PRP-UX-SHELL-01.md  PRP-UX-STATES-02.md  PRP-VAL-01-Shared-Validator.md  PRP-VB-01-v2-Variant-Builder-Contract-20250909-003735.md  (+3 more)
docs/legacy/: LEGACY-OPTIMIZER.md  SYMBOLS-TO-KEEP.md
docs/runs/: README.md
docs/validators/: README.md
e2e/: dark-mode.spec.ts  lineup-table.spec.ts  optimizer-settings.spec.ts
field_sampler/: __init__.py  engine.py
fixtures/: player_ids.csv  projections.csv
hooks/: useRosterMap.ts
lib/: README.md
lib/csv/: exportLineups.ts
lib/domain/: types.ts
lib/ingest/: adapter.ts  aliases.ts  normalize.ts  parse.ts  schemas.ts
lib/opt/: config.ts  constraints.ts  fixtures.ts  run.ts  types.ts
lib/runs/: api.ts
lib/state/: ingest-store.ts  run-store.ts
lib/table/: columns.tsx
lib/ui/: a11y.ts  constants.ts  layout.ts
pipeline/: README.md  __init__.py
pipeline/ingest/: README.md  __init__.py  cli.py
pipeline/io/: __init__.py  files.py  validate.py
pipeline/registry/: README.md  __init__.py
pipeline/schemas/: README.md  (+19 more)
playwright-report/: index.html
processes/: README.md  __init__.py
scripts/: README.md  make-fixture-snapshot.mjs  qa-opt-fixture.mjs
src/: __init__.py
styles/: globals.css
test-results/: .last-run.json
test_out/: metrics.json
tests/: README.md  conftest.py  test_api_endpoints.py  test_api_smoke.py  test_api_validation.py  test_dk_entries_writer_roundtrip.py  test_dk_export_dedupe.py  test_dk_export_discovery_from_run.py  test_dk_export_from_sim_topn.py  test_dk_export_header_order.py  test_field_adapter_default_engine.py  test_field_adapter_smoke.py  test_field_dedup_and_diversity.py  test_field_failfast_no_write.py  test_field_manifest_registry.py  test_field_run_id_determinism.py  test_field_sampler_engine.py  test_field_sampler_injection.py  test_field_verbose_and_schemas_root.py  test_gpp_sim_cli.py  test_gpp_sim_engine.py  test_ingest_normalize_smoke.py  test_lineup_rules.py  test_manifest_registry_write.py  test_metrics_determinism.py  test_metrics_failfast.py  test_metrics_smoke.py  test_optimizer_adapter_smoke.py  test_optimizer_export_dk_csv.py  test_optimizer_failfast_no_write.py  test_optimizer_manifest_registry.py  test_optimizer_ownership_penalty_flag.py  test_optimizer_run_id_determinism.py  test_optimizer_verbose_and_schemas_root.py  test_orchestrator_dry_run.py  test_orchestrator_smoke.py  test_priority_latest_wins.py  test_run_registry.py  test_runtime_validation.py  test_schemas_valid.py  (+17 more)
tools/: sample_field.py
validators/: __init__.py  lineup_rules.py  types.py
workers/: optimizer.worker.ts
(+188 files in other folders)
