[project]
name = "nba-dfs"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
description = "NBA DFS pipeline"
authors = [{ name="Daniel Schrengost" }]
dependencies = [
  "pandas",
  "duckdb",
  "pyarrow",
  "pydantic",
  "streamlit",
]

# Optional development dependencies (install with: uv sync --extra dev)
[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  # Lint/validate schemas used by PRP-0 (optional but recommended)
  "yamllint>=1.35.1",
  "jsonschema>=4.23.0",
  "pyyaml>=6.0.2",
  "types-PyYAML>=6.0.12.20240917",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
extend-exclude = '''
(
  processes/optimizer/_legacy/
  | frontend/
  | app/streamlit/
)
'''

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["processes/optimizer/_legacy", "frontend", "app/streamlit", "processes/variants/_legacy", "processes/field_sampler/_legacy"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "processes", "app"]


[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "skip"
files = ["processes/optimizer/adapter.py"]
exclude = "(?x)(^processes/optimizer/_legacy/|^frontend/|^app/streamlit/)"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
  "processes.optimizer._legacy",
  "processes.optimizer._legacy.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
